--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
         <div id="exp">
             <h3>Teaching</h3>
             <ul>
+                <li>Computer Science and Engineering Tutor: CSE 105: Theory of Computability - Spring 2024</li>
                 <li>Computer Science and Engineering Tutor: CSE 105: Theory of Computability - Winter 2024</li>
-                <li>Tea</li>
-                <li>Milk</li>
             </ul>
         </div>
 
