--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img style="width:200px" src="profile.jpeg" alt="Picture">
             </div>
             <h3>About</h3>
-            I am a 3rd year at UC San Diego majoring in Computer Science and Pure Math. 
+            I am a 3rd year at UC San Diego majoring in Computer Science and Mathematics. 
             Currently, my interests lies in complexity theory, in particular quantum complexity. 
             Along the way, I picked up some fun areas that I can dive deeper into, like cryptography, computer science education, and more! 
         </div>
